Add custom theme for zsh
Signed-off-by: Vinicius Souza <vinicius.souza@quantosobra.com.br>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,18 @@
 # Default terminal
 set -g default-terminal "xterm-256color"
 
+# Theme
+set -g window-active-style "fg=colour253,bg=colour234"
+set -g window-style "fg=colour244,bg=colour235"
+set -g pane-border-style "fg=colour60,bg=colour234"
+set -g pane-active-border-style "fg=colour60,bg=colour234"
+set -g status-style "fg=colour188,bg=colour236"
+set -g message-style "fg=colour188,bg=colour236"
+set -g window-status-style "fg=default,bg=default"
+set -g window-status-current-style "fg=colour15,bg=colour33"
+
 # Use zsh if installed
 if-shell "test -x /usr/bin/zsh" "set-option -g default-shell /usr/bin/zsh"
-
-set-window-option -g window-active-style bg=terminal
-set-window-option -g window-style        bg=black
 
 setw -g mouse on
 set -sg escape-time 10
